--- a/demo-angular/src/app/home/other-component/other-component.component.html
+++ b/demo-angular/src/app/home/other-component/other-component.component.html
@@ -4,5 +4,9 @@
 
 <GridLayout class="page">
     <!-- Add your page content here -->
-    <Button text="click me" nsRouterLink="/home/other-component"></Button>
+    <Button
+        text="click me"
+        (tap)="onClick()"
+        style="width: 100; height: 100; background-color: black; color: whitesmoke;"
+    ></Button>
 </GridLayout>
